@@ -24,8 +24,12 @@ CLASSPATH="@LIB_DIR@/@APP_JAR@:@LIB_DIR@/*"
 MAIN_CLASS="@MAIN_CLASS@"
 
 DEFAULT_JVM_OPTS="-Dfile.encoding=UTF-8 \
+    --add-opens=java.base/java.lang=ALL-UNNAMED \
+    -Xmx256m \
+    -XX:TieredStopAtLevel=1 \
+    -XX:+UseSerialGC \
     -XX:+HeapDumpOnOutOfMemoryError \
     -XX:+ExitOnOutOfMemoryError \
     -XX:HeapDumpPath=${LOG_DIR}"
 
-${JAVACMD} ${DEFAULT_JVM_OPTS} -classpath ${CLASSPATH} ${MAIN_CLASS} "$@"
+${JAVACMD} ${DEFAULT_JVM_OPTS} ${IGNITE3_OPTS} -classpath ${CLASSPATH} ${MAIN_CLASS} "$@"
